k8s/01-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dtm-cluster
  namespace: kube-system
  labels:
    app: dtm-cluster
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dtm-cluster
  template:
    metadata:
      labels:
        app: dtm-cluster
    spec:
      containers:
        - name: dtm-cluster
          image: uhub.service.ucloud.cn/entropypool/dtm:1.17.1.6
          imagePullPolicy: Always
          ports:
            - containerPort: 36789
              protocol: TCP
              name: http
            - containerPort: 36790
              protocol: TCP
              name: grpc
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 36789
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 36789
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
