k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dtm-cluster-svc
  namespace: kube-system
  labels:
    app: dtm-cluster
spec:
  ports:
    - port: 36790
      targetPort: 36790
      name: grpc
    - port: 36789
      targetPort: 36789
      name: http
  selector:
    app: dtm-cluster
  type: ClusterIP
