k8s/03-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtm-cluster-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: dtm
    k8s.kuboard.cn/workload: dtm
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-common-headers@kubernetescrd
spec:
  rules:
    - host: dtm.development.npool.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dtm-cluster-svc
                port:
                  number: 36789
